--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>Hello, world!</title>
 </head>
 
-<body>
+<body style="padding-top: 70px">
     <!--Fixed-top es para que se quede anclado en la parte superior-->
     <header class="container-fluid bg-primary fixed-top">
         <div class="container bg-primary">
-            <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
+            <nav class="navbar navbar-expand-lg  navbar-dark bg-primary" style="height: 70px">
                 <a class="navbar-brand" href="#">Bootstrap</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
